[gd_scene load_steps=13 format=3 uid="uid://ecsnddva0txp"]

[ext_resource type="Script" path="res://scenes/enemies/drone_1.gd" id="1_emimh"]
[ext_resource type="Texture2D" uid="uid://bedw2fcenchyy" path="res://graphics/enemies/drone.png" id="1_kjn4m"]
[ext_resource type="Shader" path="res://scenes/enemies/drone_1.gdshader" id="2_yi67x"]
[ext_resource type="Texture2D" uid="uid://bga34pi8o5crl" path="res://graphics/explosions/explosion_3.png" id="3_kadw3"]
[ext_resource type="AudioStream" uid="uid://dkcm3stn17r6e" path="res://audio/explosion.wav" id="5_gdg53"]
[ext_resource type="AudioStream" uid="uid://chwr3f4kwlcx5" path="res://audio/solid_impact.ogg" id="6_b4bur"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hgw64"]
shader = ExtResource("2_yi67x")
shader_parameter/color = Color(1, 0, 0, 1)
shader_parameter/progress = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_vob36"]
radius = 74.108

[sub_resource type="CircleShape2D" id="CircleShape2D_lcta8"]
radius = 1912.4

[sub_resource type="Animation" id="Animation_vlywc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Explosion:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [23]
}

[sub_resource type="Animation" id="Animation_q5cs3"]
resource_name = "explosion"
length = 2.0
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Explosion:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1, 1.05, 1.1, 1.15, 1.2, 1.25, 1.3, 1.35, 1.4, 1.45, 1.5, 1.55, 1.6, 1.65, 1.7, 1.75, 1.8, 1.85, 1.9, 1.95),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Explosion:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Explosion:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.4, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Drone:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/5/type = "audio"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sounds/Explosion")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("5_gdg53")
}],
"times": PackedFloat32Array(0)
}
tracks/5/use_blend = true
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"killpoints"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xptfe"]
_data = {
"RESET": SubResource("Animation_vlywc"),
"explosion": SubResource("Animation_q5cs3")
}

[node name="drone" type="CharacterBody2D" groups=["Entity"]]
collision_layer = 2
collision_mask = 47
script = ExtResource("1_emimh")

[node name="Drone" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_hgw64")
position = Vector2(1, -1)
rotation = 1.5708
texture = ExtResource("1_kjn4m")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_vob36")

[node name="NoticeArea" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="NoticeArea"]
shape = SubResource("CircleShape2D_lcta8")

[node name="HitTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="Explosion" type="Sprite2D" parent="."]
texture = ExtResource("3_kadw3")
hframes = 8
vframes = 8
frame = 23

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xptfe")
}

[node name="Sounds" type="Node2D" parent="."]

[node name="HitSound" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("6_b4bur")
volume_db = 3.957

[node name="Explosion" type="AudioStreamPlayer2D" parent="Sounds"]
volume_db = 11.422

[connection signal="body_entered" from="NoticeArea" to="." method="_on_notice_area_body_entered"]
[connection signal="timeout" from="HitTimer" to="." method="_on_hit_timer_timeout"]
